--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "hms-spaces",
+    "name": "mindspaces_tcc",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -7,6 +7,7 @@
         "@100mslive/hms-video-react": "^0.3.32",
         "@craco/craco": "^6.2.0",
         "boring-avatars": "^1.5.8",
+        "framer-motion": "^5.4.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "uuid": "^8.3.2"
@@ -38,7 +39,7 @@
     "devDependencies": {
         "autoprefixer": "^9",
         "postcss": "^7",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-        "react-scripts": "4.0.3"
+        "react-scripts": "4.0.3",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat"
     }
 }
